--- a/scss/index.scss
+++ b/scss/index.scss
@@ -193,16 +193,18 @@ header {
 
     } // header-bg
 
-    nav {
-      .gnb {
+    // nav {
+      
+      
+
+      #gnb {
+        display: flex;
+        justify-content: center;
         position: absolute;
         top: 0; left: 50%;
         transform: translateX(-50%);
-        display: flex;
-        justify-content: center;
         width: 100%;
         height: 80px;
-        background-color: $color-main;
 
         li {
           width: 160px;
@@ -217,7 +219,14 @@ header {
           }
         } // li
       } // gnb
-    } // nav
+
+      .menu_top {
+        position: fixed;
+        top: 0; 
+        background-color: $color-main;
+        z-index: 99;
+      }
+    // } // nav
 
     .ham-icon {
       position: absolute;
@@ -396,24 +405,23 @@ main {
 
             transform-style: preserve-3d;
             visibility: hidden;
-            transition: all 2s;
+            transition: all 1s;
           }
 
           // *************************************
-          // .flip {
+          .flip {
 
-          //   .front {
+            .front {
+              transform:rotateY(0deg);
 
-          //     transform:rotateY(0deg)
+            }
 
-          //   }
-
-          //   .back {
-          //     // transform:rotateY(180deg)
+            .back {
+              transform:rotateY(180deg);
               
-          //   }
+            }
 
-          // }
+          }
         } // me-emoticon
   
         .me-introduce {
@@ -598,7 +606,6 @@ main {
               padding: 4px 0;
               text-align: left;
               font-size: 16px;
-              // background-color: palegoldenrod;
             }
           } // flexbox
         } // info-box
@@ -680,7 +687,7 @@ main {
     // pofol-box 공통소스 시작
     .pofol-box {
       width: 100%;
-      margin-bottom: 100px;
+      margin-bottom: 160px;
 
       .flexbox {
         @include responsive(tablet-screens) {
