--- a/scss/index.scss
+++ b/scss/index.scss
@@ -82,17 +82,16 @@ body {
   }
 }
 
-@keyframes textFlip {
-  0% {
-    opacity: 0;
-    transform: translateY(0);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(-50px);
-  }
-}
+// @keyframes textFlip {
+//   0% {
+//     opacity: 0;
+//     transform: translateY(0);
+//   }
+//   100% {
+//     opacity: 1;
+//     transform: translateY(-50px);
+//   }
+// }
 
 
 
@@ -106,8 +105,9 @@ header {
 
   #home {
     .logo {
-      position: absolute;
+      position: fixed;
       padding: 20px;
+      z-index: 98;
 
       img {
         width: 60px;
@@ -130,7 +130,6 @@ header {
       //   img {
       //     max-width: 30vw;
       //   }
-
       // }
 
       // .cloud1 {
@@ -193,25 +192,28 @@ header {
 
     } // header-bg
 
-    // nav {
+    nav {
+      position: fixed;
+      top: 0; left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      z-index: 99;
+      // background-color: #cc6699;
       
-      
-
       #gnb {
         display: flex;
         justify-content: center;
-        position: absolute;
-        top: 0; left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        height: 80px;
+        height: 60px;
 
         li {
           width: 160px;
           margin-right: 1.2em;
           text-align: center;
-          line-height: 80px;
-          font-weight: 500;
+          line-height: 60px;
+
+          a {
+            color: $body-bg;
+          }
 
           a:hover {
             font-weight: 600;
@@ -221,59 +223,56 @@ header {
       } // gnb
 
       .menu_top {
-        position: fixed;
-        top: 0; 
         background-color: $color-main;
-        z-index: 99;
+        transition: 1s;
       }
-    // } // nav
+    } // nav
 
     .ham-icon {
-      position: absolute;
-      top: 30px; right: 30px;
+      position: fixed;
+      top: 30px; right: 40px;
       cursor: pointer;
-      // background-color: rebeccapurple;
+      z-index: 98;
 
       span {
         width: 28px;
-        height: 4px;
+        height: 6px;
         border-radius: 4px;
-        // background-color: #333;
-        background-color: $body-bg;
+        background-color: #ff6464;
 
         &:nth-child(2) {
-          margin: 8px 0;
+          margin: 6px 0;
         }
-      }
+      } // span
     } // ham-icon
 
     .mobile-nav-wrap {
       position: fixed;
       height: 100%;
       width: 0;
-      z-index: 1;
+      z-index: 99;
       top: 0;
       left: 0;
-      background-color: $body-bg;
+      background-color: $color-main;
       overflow-x: hidden;
       transition: 0.5s;
 
       .closebtn {
         position: absolute;
-        top: 30px; right: 30px;
+        top: 24px; right: 40px;
         cursor: pointer;
 
         &::before,
         &::after {
           display: inline-block;
           position: absolute;
-          top: 0; left: 50%; 
+          top: 0; left: 50%;
           transform: translate(-50%, -50%);
-          content: ' ';
-          width: 4px;
-          height: 32px;
+          content: '';
+          width: 8px;
+          height: 38px;
           border-radius: 4px;
-          background-color: $color-main;
+          background-color: #333;
           cursor: pointer;
         }
 
@@ -293,19 +292,21 @@ header {
         width: 100%;
         text-align: center;
         margin-top: 30px;
+        font-family: mckloud-stroke;
 
         li {
 
           a {
-            font-size: 38px;
+            font-size: 52px;
             letter-spacing: 8px;
             line-height: 100px;
-            font-weight: 600;
+            color: $body-bg;
 
             &:hover {
-              color: $color-main;
-              font-size: 34px;
-              transition: 0.2s;
+              color: $body-bg;
+              font-size: 56px;
+              font-family: mckloud-full;
+              transition: 0.8s;
             }
           } // a
         } // li
@@ -326,7 +327,6 @@ header {
         margin: 20px auto;
         font-weight: 600;
         font-size: $strong-text-M;
-        // background-color: #eee;
 
         .text-wrap {
           position: relative;
@@ -481,7 +481,6 @@ main {
           h4 {
             margin-bottom: 12px;
           }
-  
         } // about-work-content
       } // flexbox
     } // about-work
@@ -751,6 +750,7 @@ main {
               &:hover {
                 color: $color-main;
                 background-color: $color-sub;
+                transition: 0.2s;
               }
             } // button
           } // modal-btn
@@ -807,7 +807,7 @@ footer {
 
   .footer-bg {
     position: relative;
-    padding: 80px 0;
+    padding: 100px 0;
     background-color: $color-sub;
     background: linear-gradient(transparent, $color-sub);
 
@@ -855,6 +855,7 @@ footer {
 
         &:hover {
           filter: hue-rotate(60deg);
+          transition: 0.4s;
         }
       } // topbtn
     } // contact
@@ -862,9 +863,9 @@ footer {
 
   .copyright {
     width: 100%;
-    height: 80px;
+    height: 100px;
     text-align: center;
-    line-height: 80px;
+    line-height: 100px;
     vertical-align: center;
     font-size: 14px;
     color: #eee;
