--- a/scss/index.scss
+++ b/scss/index.scss
@@ -531,15 +531,15 @@ main {
           width: 900px;
         }
 
-        svg {
-          position: absolute;
-          top: 168px; left: 0;
-          // width: 100%;
-          // height: 60%;
-          background-color: rgba(252, 252, 252, 0.6);
+        // svg {
+        //   position: absolute;
+        //   top: 168px; left: 0;
+        //   // width: 100%;
+        //   // height: 60%;
+        //   background-color: rgba(252, 252, 252, 0.6);
 
     
-        }
+        // }
       } // track
 
 
